Add :: Description to download by using curl Argus